--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -33,9 +33,9 @@
   display: none;
 }
 
-.header__menu {
-  display: none;
-}
+//.header__menu {
+//  display: none;
+//}
 
 .header__list {
   display: flex;
