--- a/src/styles/persons.scss
+++ b/src/styles/persons.scss
@@ -1,7 +1,23 @@
+@mixin activeElement {
+  background-color: #00FF57;
+  border-color: unset;
+  .person__number {
+    color: #171717;
+    transform: translateX(-0.5px) translateY(-0.5px);
+  }
+  .person_bottom_block {
+    background-color: #F6F6F6;
+    border-width: 0;
+  }
+  .person__title, .person__text {
+    color: #121212;
+  }
+}
+
 .persons {
   display: grid;
-  grid-template-columns:repeat(auto-fit,228px);
-  grid-template-rows: 190px;
+  grid-template-columns:repeat(auto-fit, 228px);
+  //grid-template-rows: 190px;
   grid-auto-flow: dense;
   gap: 10px;
   margin-top: 40px;
@@ -10,29 +26,24 @@
 .person {
   box-sizing: border-box;
   border-radius: 3px;
-  border: 1px solid rgba(189,189,189,0.25);
+  border: 1px solid rgba(189, 189, 189, 0.25);
   position: relative;
-  width: 228px;
   height: 190px;
   background-color: #191919;
-  transition: background-color 0.2s;
+  transition: all .2s;
   margin: 0 auto;
-  &:hover, &.active {
-    background-color: #00FF57;
-    border: none;
-    .person__number {
-      color: #171717;
-      transform: translateX(-0.5px) translateY(-0.5px);
-    }
-    .person_bottom_block {
-      background-color: #F6F6F6;
-      border: none;
-    }
-    .person__title, .person__text {
-      color: #121212;
-    }
+
+  &.active {
+    @include activeElement;
   }
 }
+
+@media (hover: hover) {
+  .person:hover {
+    @include activeElement;
+  }
+}
+
 
 .person_top_block {
   position: absolute;
@@ -59,10 +70,9 @@
 
 .person_bottom_block {
   box-sizing: border-box;
-  border-top: 1px solid rgba(189,189,189,0.25);
+  border-top: 1px solid rgba(189, 189, 189, 0.25);
   position: absolute;
   bottom: 0;
-  right: 0;
   width: 100%;
   height: 50px;
   background-color: #505050;
@@ -74,9 +84,6 @@
 }
 
 .person__title, .person__text {
-  font-size: 15px !important;
-  line-height: 18px !important;
-  color: #e5e5e5;
   transition: color 0.5s ease;
 }
 
@@ -91,11 +98,20 @@
   display: flex;
   grid-column: 1 / -1;
   width: 100%;
+  height: auto;
+  overflow: hidden;
   box-sizing: border-box;
+  transition: all 0.5s ease-in-out;
+  //animation: 0.5s ease-in-out slideDown;
   background-color: #191919;
-  border: 1px solid rgba(189,189,189,0.25);
+  border: 1px solid rgba(189, 189, 189, 0.25);
   border-radius: 3px;
 }
+
+//.person_information .active {
+//  height: 100%;
+//}
+
 
 .information__number {
   display: flex;
@@ -105,7 +121,7 @@
   height: 51px;
   margin-right: 24px;
   background: #00FF57;
-  border-radius: 3px 0px;
+  border-radius: 3px 0;
 }
 
 .information_main {
@@ -118,13 +134,13 @@
 
 .information__price {
   display: flex;
+
   svg {
     margin-top: 5px;
   }
 }
 
 .price__num {
-  @extend .text500__person_title;
   text-align: center;
   margin-left: 13px;
 }
@@ -132,6 +148,7 @@
 .information__text {
   max-width: 880px;
   margin-top: 9px !important;
+  margin-bottom: 14px;
 }
 
 .information__share {
@@ -144,18 +161,39 @@
   width: 219px;
   margin-top: 20px;
   height: 60px;
+
   p {
     align-self: center;
     margin-top: 7px;
 
   }
+
   &:after {
     content: '';
     position: absolute;
     height: 1px;
-    background-color: rgba(189,189,189,0.25);
+    background-color: rgba(189, 189, 189, 0.25);
     width: 100%;
     left: 0;
     bottom: -10px;
+  }
+}
+
+@media (max-width: 704px) {
+  .persons {
+    grid-template-columns:repeat(auto-fit, 100%);
+    //&:nth-
+  }
+  .information__number,.information__title,.information__subtitle, .information__share {
+    display: none;
+  }
+}
+
+@keyframes slideDown {
+  from {
+    height: 0;
+  }
+  to {
+    height: 100%;
   }
 }
